--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -114,6 +114,10 @@ p {
     background: #7692F7;
 }
 
+a {
+    text-decoration: none;
+}
+
 
 /* Large Blue */
 
@@ -124,20 +128,21 @@ p {
     justify-content: center;
     align-items: center;
     padding: 10px 30px;
-    border: 3px solid #7692F7;
+    /* Yellow/Ozone Broken */
+    background: #F99645;
     border-radius: 40px;
-    /* Blues/Blue */
-    background: #7692F7;
+    border: none;
     font-family: 'Rubik', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 21.875px;
     line-height: 26px;
     /* identical to box height */
+    display: flex;
     align-items: center;
     text-align: center;
-    /* Blues/Blue White */
-    color: #F8F9FF;
+    /* Yellow/Yellow White */
+    color: #FFFCF7;
     /* Inside auto layout */
     flex: none;
     order: 0;
@@ -146,17 +151,18 @@ p {
 }
 
 .buttonLargeB:hover {
-    /* Blues/Blue */
-    background: #7692F7;
-    /* Blues/Blue White */
-    border: 3px solid #F8F9FF;
-    box-sizing: border-box;
+    /* Yellow/Ozone Broken */
+    background: #F99645;
+    box-shadow: 0px 0px 10px #CCD5FE;
     border-radius: 40px;
 }
 
 .buttonLargeB:active {
-    box-shadow: inset 0px 4px 15px rgba(82, 106, 215, 0.7);
+    /* Yellow/Ozone Broken */
+    background: #F99645;
+    box-shadow: inset 0px 4px 15px #9B6B17;
     border-radius: 40px;
+    color: #442C03;
 }
 
 
@@ -169,10 +175,10 @@ p {
     justify-content: center;
     align-items: center;
     padding: 10px 30px;
-    /* Blues/Blue */
-    background: #7692F7;
-    border: 3px solid #7692F7;
+    /* Yellow/Ozone Broken */
+    background: #F99645;
     border-radius: 40px;
+    border: none;
     /* Rubik/Rubik 5 */
     font-family: 'Rubik', sans-serif;
     font-style: normal;
@@ -180,6 +186,7 @@ p {
     font-size: 14px;
     line-height: 17px;
     /* identical to box height */
+    display: flex;
     align-items: center;
     text-align: center;
     /* Blues/Blue White */
@@ -192,13 +199,16 @@ p {
 }
 
 .buttonSmallB:hover {
+    /* Yellow/Ozone Broken */
     text-decoration-line: underline;
+    /* Yellow/Yellow White */
+    color: #FFFCF7;
 }
 
 .buttonSmallB:active {
-    /* Blues/Blue */
-    background: #7692F7;
-    box-shadow: inset 0px 4px 15px rgba(82, 106, 215, 0.7);
+    /* Yellow/Ozone Broken */
+    background: #F99645;
+    box-shadow: inset 0px 4px 15px #9B6B17;
     border-radius: 40px;
 }
 
@@ -325,12 +335,11 @@ li:hover {
 }
 
 .ScreenGrab {
-    /* appImg */
     position: static;
-    width: 577.17px;
-    height: 647.77px;
-    left: 691.41px;
-    top: 0px;
+    width: 517.77px;
+    height: 605.03px;
+    left: 721.12px;
+    top: 21.37px;
     /* Inside auto layout */
     flex: none;
     order: 1;
@@ -433,10 +442,10 @@ li:hover {
 
 .imgStall {
     position: static;
-    width: 468px;
-    height: 610.27px;
-    left: 361px;
-    top: -96.64px;
+    width: 467.66px;
+    height: 592.91px;
+    left: 345.17px;
+    top: -92.96px;
     /* Inside auto layout */
     flex: none;
     order: 0;
